feat: get all device dropdown
