# internal/handler/device_handler_impl.go
@@ -61,3 +61,34 @@ func (h *deviceHandler) GetAllDevice(ctx *fiber.Ctx) error {
 		Data:    res,
 	})
 }
+
+// AllDropdownDevice godoc
+// @Summary      Get All Dropdown Device based on parameter
+// @Description  All Dropdown Device
+// @ID           get-all-dropdown-device
+// @Tags         device
+// @Accept       json
+// @Produce      json
+// @Security     AccessToken
+// @Param        page query int false "Page" default(1)
+// @Param        limit query int false "Limit" default(10)
+// @Param        search query string false "Search"
+// @Success      200  {object}  response.BaseResponse{data=response.BaseResponsePagination[response.BaseDropdown]}
+// @Failure      500  {object}  response.BaseResponse
+// @Router       /device/dropdown [get]
+func (h *deviceHandler) AllDropdownDevice(ctx *fiber.Ctx) error {
+	req := request.BasePagination{
+		Page:   ctx.QueryInt("page", 1),
+		Limit:  ctx.QueryInt("limit", constants.DefaultPageLimit),
+		Search: ctx.Query("search"),
+	}
+
+	req.Normalize()
+
+	res := h.service.GetAllDropdownDevice(ctx.Context(), req)
+	return ctx.JSON(response.BaseResponse{
+		Code:    http.StatusOK,
+		Message: "Success!",
+		Data:    res,
+	})
+}
